--- a/css/css.css
+++ b/css/css.css
@@ -3,6 +3,7 @@
     --fuenteParrafos: 'Open Sans', sans-serif;
 
     --primario: #784D3C;
+    --gris: #e1e1e1;
     --blanco: #ffffff;
     --negro: #000000;
 
@@ -14,9 +15,11 @@ html{
 
 }
 
-*,*:before, *::after{
-    box-sizing: inherit; /* hara mas dinamico todo*/
 
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
 
 body{
@@ -31,15 +34,16 @@ body{
 .contenedor{
     max-width: 120rem;
     width: 90%;
+    /* Lo que hace el atributo min aplicara el valor de mas pequeño de los valores que se le dan  */
+    width: min(90%, 120rem);
     margin: 0 auto;
 }
 a{
     text-decoration: none;
-
 }
-
 h1, h2, h3, h4{
     font-family: var(--fuenteHeading);
+    line-height: 1.2;
 }
 h1{
     font-size: 4.8rem;
@@ -53,7 +57,9 @@ h3{
 h4{
     font-size: 2.8rem;
 }
-
+img{
+    width: 100%;
+}
 /* Utilidades */
 
 .no-margin{
@@ -88,13 +94,15 @@ h4{
         margin-top: 15rem;
     }
 }
-
+.barra{
+    padding-top: 2rem;
+}
 @media (min-width: 768px) {
     .barra{
         display:flex;
         justify-content: space-between; /*para organizar horizontalmente*/
         align-items: center; /*Para alinear verticalmente*/
-    }
+    }    
 
 }
 
@@ -122,3 +130,86 @@ h4{
     font-size: 1.8rem;
     color: var(--blanco);
 }
+
+@media (min-width: 768px) {
+    .contenido-principal{
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        column-gap: 4rem;
+
+    }
+    img{
+        width: 100%;
+    }
+
+}
+
+.entrada{
+    border-bottom: 1px solid var(--gris);
+    margin-bottom: 2rem;
+}
+
+.entrada:last-of-type{
+    /* Este es un tipo de selector que nos permite seleccionar la ultima clase utilizada sin necesidad de agregarle una clase extra (en este caso .entrada) y modificarla */
+    border:none;
+    margin-bottom: 0;
+}
+
+.boton{
+    display: block;
+    font-family: var(--fuenteHeading);
+    color: var(--blanco);
+    text-align: center;
+    padding: 1rem 3rem;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-bottom: 2rem;
+}
+@media (min-width: 768px) {
+    .boton{
+        display:inline-block
+
+    }
+}
+
+.boton--primario{
+    background-color: var(--negro);
+}
+
+.boton--secundario{
+    background-color: var(--primario);
+}
+.cursos{
+    list-style: none;
+}
+
+.widget-curso{
+    border-bottom: 1px solid var(--gris);
+    margin-bottom: 2rem;
+}
+.widget-curso:last-of-type{
+    border-bottom: 0;
+    margin-bottom: none;
+}
+
+.widget-curso__label{
+    font-family: var(--fuenteHeading);
+    font-weight: 700;
+}
+
+.widget-curso__info{
+    font-weight: normal;
+}
+
+.widget-curso__info,
+.widget-curso__label{
+    font-size: 2rem;
+}
+
+.footer{
+   background-color: var(--negro);
+   padding-bottom: 3rem;
+   margin-top: 3rem;
+}
+
