--- a/css/css.css
+++ b/css/css.css
@@ -213,3 +213,20 @@ img{
    margin-top: 3rem;
 }
 
+/* Sobre nosotros */
+
+@media (min-width: 768px) {
+    .sobre-nosotros{
+        display: flex;
+        gap: 2rem;
+        justify-content: space-between;
+    }
+    
+    .sobre-nosotros__imagen,
+    .sobre-nosotros__texto{
+        
+        flex-basis: calc(50% - 1rem);
+    }
+
+
+}
