--- a/css/css.css
+++ b/css/css.css
@@ -165,12 +165,17 @@ img{
     text-transform: uppercase;
     font-weight: 700;
     margin-bottom: 2rem;
+    border: none;
+
 }
 @media (min-width: 768px) {
     .boton{
         display:inline-block
 
     }
+}
+.boton:hover{
+    cursor: pointer;
 }
 
 .boton--primario{
@@ -262,4 +267,39 @@ font-family: var(--fuenteHeading);
 .curso__info,
 .curso__label{
     font-size: 2rem;
+}
+
+/* Conctacto */
+.contacto-bg{
+    background-image: url(../img/contacto.jpg);
+    height: 40rem;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    margin-bottom: -10px;
+}
+
+/* formulario */
+.formulario{
+    background-color: var(--blanco);
+    margin: -5rem auto 0 auto;
+    width: 95%;
+    padding: 5rem;
+}
+.campo{
+    display: flex;
+    margin-bottom: 2rem;
+    gap: 2rem;
+}
+.campo__label{
+    flex: 0 0 9rem;
+    text-align: right;
+    padding-right: 2rem;
+}
+.campo__field{
+    flex: 1;
+    border: 1px solid var(--gris);
+}
+.campo__field--textarea{
+    height: 20rem;
 }
